[gd_scene load_steps=7 format=3 uid="uid://dhgy1g0vusag6"]

[ext_resource type="Script" path="res://Ennemies/Boss3/boss_3.gd" id="1_e8l8i"]
[ext_resource type="Texture2D" uid="uid://b1hu1lnq84fe0" path="res://Imports/Graphics/Ships/ship_0000.png" id="2_5evjs"]
[ext_resource type="Texture2D" uid="uid://c032w4iexrds" path="res://Imports/Graphics/Ships/ship_0001.png" id="3_m7wrj"]
[ext_resource type="Texture2D" uid="uid://206cj2n35m1j" path="res://Imports/Graphics/Ships/pixil-frame-0.png" id="4_i2pq5"]

[sub_resource type="Animation" id="Animation_6lyov"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_m7wrj"), ExtResource("4_i2pq5"), ExtResource("3_m7wrj")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hoew0"]
_data = {
"hit": SubResource("Animation_6lyov")
}

[node name="Boss2" type="CharacterBody2D"]
position = Vector2(302, 74)
rotation = 3.14159
script = ExtResource("1_e8l8i")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4.25, 4.28125)
texture = ExtResource("2_5evjs")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-12, -10, -11.9999, -36, 1.00011, -44, 12.0001, -33, 41.0001, -27.9999, 56, -3.99986, 59, 15.0001, 37.9999, 28.0001, 1.99988, 48, -21.0001, 35.9999, -45.0001, 25.9999, -59, 8.99985, -54, -16.0001, -42.9999, -28.0001, -23.9999, -29.0001)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hoew0")
}

[node name="HG" type="Marker2D" parent="."]
position = Vector2(144, -52.9996)
rotation = 0.785398

[node name="HG2" type="Marker2D" parent="HG"]
position = Vector2(2.82864, -52.326)

[node name="HG3" type="Marker2D" parent="HG"]
position = Vector2(2.82874, -74.9534)

[node name="HG4" type="Marker2D" parent="HG"]
position = Vector2(2.82881, -107.48)

[node name="HG5" type="Marker2D" parent="HG"]
position = Vector2(4.24313, -138.593)

[node name="HG6" type="Marker2D" parent="HG"]
position = Vector2(5.65741, -169.706)

[node name="HG7" type="Marker2D" parent="HG"]
position = Vector2(2.82857, -29.6986)

[node name="HG8" type="Marker2D" parent="HG"]
position = Vector2(2.12141, -13.4352)

[node name="HG9" type="Marker2D" parent="HG"]
position = Vector2(0.707108, 21.9202)

[node name="HG10" type="Marker2D" parent="HG"]
position = Vector2(1.41417, 43.8405)

[node name="HG11" type="Marker2D" parent="HG"]
position = Vector2(2.12122, 65.7608)

[node name="HD" type="Marker2D" parent="."]
position = Vector2(-136, -46.0004)
rotation = 0.785398

[node name="HD2" type="Marker2D" parent="HD"]
position = Vector2(-25.4557, -9.15527e-05)

[node name="HD4" type="Marker2D" parent="HD"]
position = Vector2(-76.3674, 1.41397)

[node name="HD3" type="Marker2D" parent="HD"]
position = Vector2(-50.9116, 1.41403)

[node name="HD5" type="Marker2D" parent="HD"]
position = Vector2(-98.2877, 2.12103)

[node name="HD6" type="Marker2D" parent="HD"]
position = Vector2(-121.622, 1.41382)

[node name="HD7" type="Marker2D" parent="HD"]
position = Vector2(-147.078, 4.24225)

[node name="HD8" type="Marker2D" parent="HD"]
position = Vector2(-172.534, 1.41368)

[node name="HD9" type="Marker2D" parent="HD"]
position = Vector2(-200.818, 1.41364)

[node name="HD10" type="Marker2D" parent="HD"]
position = Vector2(25.456, 3.05176e-05)

[node name="HD11" type="Marker2D" parent="HD"]
position = Vector2(48.0834, -1.41412)

[node name="BD" type="Marker2D" parent="."]
position = Vector2(-273.999, -437.001)

[node name="BG" type="Marker2D" parent="."]
position = Vector2(270.001, -431.999)

[node name="BG9" type="Marker2D" parent="."]
position = Vector2(270.001, -454.999)

[node name="BG10" type="Marker2D" parent="."]
position = Vector2(269.001, -474.999)

[node name="BG11" type="Marker2D" parent="."]
position = Vector2(268.001, -495.999)

[node name="BG12" type="Marker2D" parent="."]
position = Vector2(268.001, -495.999)

[node name="BG13" type="Marker2D" parent="."]
position = Vector2(269.001, -518.999)

[node name="BG2" type="Marker2D" parent="."]
position = Vector2(270.001, -406.999)

[node name="BG3" type="Marker2D" parent="."]
position = Vector2(271.001, -383.999)

[node name="BG4" type="Marker2D" parent="."]
position = Vector2(270.001, -357.999)

[node name="BG5" type="Marker2D" parent="."]
position = Vector2(269.001, -329.999)

[node name="BG6" type="Marker2D" parent="."]
position = Vector2(269.001, -303.999)

[node name="BG7" type="Marker2D" parent="."]
position = Vector2(268.001, -275.999)

[node name="BG8" type="Marker2D" parent="."]
position = Vector2(267.001, -251.999)

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
